añadir consultas nativas