@@ -1,6 +1,7 @@
 package org.example.football_team_management.service;
 
 import org.example.football_team_management.dto.JugadorDto;
+import org.example.football_team_management.model.Equipo;
 import org.example.football_team_management.model.Jugador;
 import org.example.football_team_management.repository.JugadorRepository;
 import org.springframework.stereotype.Service;
@@ -13,10 +14,11 @@ public class JugadorServiceImpl implements JugadorService {
 
     private final JugadorRepository jugadorRepository;
 
-    // Inyeccion por constructor
     public JugadorServiceImpl(JugadorRepository jugadorRepository) {
         this.jugadorRepository = jugadorRepository;
     }
+
+    // ================= CRUD =================
 
     @Override
     public List<JugadorDto> listar() {
@@ -43,42 +45,26 @@ public class JugadorServiceImpl implements JugadorService {
         Jugador existente = jugadorRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Jugador no encontrado"));
 
-        // Actualiza los campos
         existente.setNombre(dto.getNombre());
         existente.setPosicion(dto.getPosicion());
         existente.setDorsal(dto.getDorsal());
         existente.setFechaNac(dto.getFechaNac());
         existente.setNacionalidad(dto.getNacionalidad());
-        existente.setEquipo(dto.getEquipo());
+        if (dto.getIdEquipo() != null) {
+            Equipo equipo = new Equipo();
+            equipo.setIdEquipo(dto.getIdEquipo());
+            existente.setEquipo(equipo);
+        }
 
         Jugador actualizado = jugadorRepository.save(existente);
+
         return convertirADto(actualizado);
     }
 
 
+    // ================= CONSULTAS =================
 
-    // Convierte DTO a entidad
-    private Jugador convertirAEntity(JugadorDto dto) {
-        Jugador jugador = new Jugador();
-        jugador.setNombre(dto.getNombre());
-        jugador.setPosicion(dto.getPosicion());
-        jugador.setDorsal(dto.getDorsal());
-        jugador.setFechaNac(dto.getFechaNac());
-        jugador.setNacionalidad(dto.getNacionalidad());
-        jugador.setEquipo(dto.getEquipo());
-        return jugador;
-    }
-    private JugadorDto convertirADto(Jugador j) {
-        JugadorDto dto = new JugadorDto();
-        dto.setIdJugador(j.getIdJugador());
-        dto.setNombre(j.getNombre());
-        dto.setPosicion(j.getPosicion());
-        dto.setDorsal(j.getDorsal());
-        dto.setNacionalidad(j.getNacionalidad());
-        dto.setEquipo(equipo.getNombre());
-        return dto;
-    }
-
+    @Override
     public List<JugadorDto> jugadoresPorEquipo(int idEquipo) {
         return jugadorRepository.jugadoresPorEquipo(idEquipo)
                 .stream()
@@ -86,16 +72,60 @@ public class JugadorServiceImpl implements JugadorService {
                 .toList();
     }
 
+    @Override
     public List<JugadorDto> jugadoresConMasDeXGoles(int goles) {
         return jugadorRepository.jugadoresConMasDeXGoles(goles)
                 .stream()
-                .map(this::convertirADto)
-                .toList();
+                .map(obj -> {
+                    JugadorDto dto = new JugadorDto();
+                    dto.setIdJugador(obj[0] != null ? ((Number) obj[0]).longValue() : null);
+                    dto.setNombre(obj[1] != null ? obj[1].toString() : null);
+                    dto.setPosicion(obj[2] != null ? obj[2].toString() : null);
+                    dto.setDorsal(obj[3] != null ? ((Number) obj[3]).intValue() : null);
+                    // obj[4] es total_goles — puedes ignorarlo o agregarlo al DTO si quieres mostrarlo
+                    return dto;
+                })
+                .collect(Collectors.toList());
     }
 
+    @Override
     public Integer totalGolesEquipo(int idEquipo) {
         return jugadorRepository.totalGolesEquipo(idEquipo);
     }
 
-}
+    // ================= CONVERSIONES =================
 
+    private JugadorDto convertirADto(Jugador j) {
+        JugadorDto dto = new JugadorDto();
+
+        dto.setIdJugador(j.getIdJugador());
+        dto.setNombre(j.getNombre());
+        dto.setPosicion(j.getPosicion());
+        dto.setDorsal(j.getDorsal());
+        dto.setFechaNac(j.getFechaNac());
+        dto.setNacionalidad(j.getNacionalidad());
+
+        if (j.getEquipo() != null) {
+            dto.setIdEquipo(j.getEquipo().getIdEquipo());
+        }
+
+        return dto;
+    }
+    private Jugador convertirAEntity(JugadorDto dto) {
+        Jugador jugador = new Jugador();
+
+        jugador.setNombre(dto.getNombre());
+        jugador.setPosicion(dto.getPosicion());
+        jugador.setDorsal(dto.getDorsal());
+        jugador.setFechaNac(dto.getFechaNac());
+        jugador.setNacionalidad(dto.getNacionalidad());
+
+        if (dto.getIdEquipo() != null) {
+            Equipo equipo = new Equipo();
+            equipo.setIdEquipo(dto.getIdEquipo());
+            jugador.setEquipo(equipo);
+        }
+
+        return jugador;
+    }
+}
